added preprocessing method to standarize pref ratings across waves

--- a/SpeedDating.ipynb
+++ b/SpeedDating.ipynb
@@ -445,11 +445,7 @@
     "\n",
     "df = pd.read_csv('data/speed_dating.csv', encoding=\"ISO-8859-1\")\n",
     "print (df.head())\n",
-    "print (df.describe())\n",
-    "\n",
-    "avg = np.average( df.loc[ df['pid'] == 11 ]['pf_o_att'] )\n",
-    "print(avg)\n",
-    "df.loc[ df['iid'] == 11 ]"
+    "print (df.describe())\n"
    ]
   },
   {
@@ -637,6 +633,87 @@
     "Good Script:\n",
     "https://www.kaggle.com/piecurus/d/annavictoria/speed-dating-experiment/a-gender-perspective-of-participants"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   attr1_2  attr4_3  fun8675309  wave\n",
+      "0       25       25          50     1\n",
+      "1        2        2           2     8\n",
+      "2        1        1           1     6\n",
+      "3        5       10           0     7\n",
+      "   attr1_2  attr4_3  fun8675309  wave\n",
+      "1        2        2           2     8\n",
+      "2        1        1           1     6\n",
+      "3        5       10           0     7\n",
+      "     attr1_2    attr4_3  fun8675309  wave\n",
+      "0  25.000000  25.000000   50.000000     1\n",
+      "1  33.333333  33.333333   33.333333     8\n",
+      "2  33.333333  33.333333   33.333333     6\n",
+      "3  33.333333  66.666667    0.000000     7\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Standardizes preference scores to correct collection variations introduced by experiment\n",
+    "From data description : \n",
+    "Waves 1-5 and 10-21: You have 100 points to distribute among the following attributes -- \n",
+    "give more points to those attributes that are more important in a potential date, \n",
+    "and fewer points to those attributes that are less important in a potential date.  Total points must equal 100.\n",
+    "Waves 6-9: Please rate the importance of the following attributes in a potential \n",
+    "date on a scale of 1-10 (1=not at all important, 10=extremely important): \n",
+    "\"\"\"\n",
+    "def standardize_pref_ratings(df):    \n",
+    "    print(df.head())\n",
+    "    \n",
+    "    # TODO: gather list of all preference cols\n",
+    "    # pref attributes : pf_o_att, attr_o\n",
+    "    pref_attr = df.filter( regex='attr|sinc|intel|fun|amb|shar' ).columns.tolist() \n",
+    "    \n",
+    "    # locate rows that have been scaled 1-10 (waves 6 - 10)\n",
+    "    off = df.loc[ df['wave'].isin( range(6,10 ) ) ]\n",
+    "    print(off.head())\n",
+    "    \n",
+    "    for index, row in off.iterrows():\n",
+    "        row_attr_tot_points = np.sum( [row[pref] for pref in pref_attr ] )\n",
+    "        #print(row_attr_tot_points)\n",
+    "        for pref in pref_attr:\n",
+    "            # scale cell value to relative percentage considering provided preference scores, mult by 100 \n",
+    "            df.loc[index, pref] = ( row[pref] / row_attr_tot_points ) * 100        \n",
+    "    print(df)\n",
+    "    return df\n",
+    "\n",
+    "# =========================================================\n",
+    "# Below used as test dataframe for development of above\n",
+    "# =========================================================\n",
+    "\n",
+    "d =  {'wave' : pd.Series([ 1, 8, 6, 7 ]) ,\n",
+    "    'attr1_2': pd.Series([25, 2, 1, 5 ]) ,\n",
+    "    'attr4_3': pd.Series([25, 2, 1, 10 ]) ,\n",
+    "    'fun8675309': pd.Series([50, 2, 1, 0 ] )\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df = standardize_pref_ratings(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
