--- a/SpeedDating.ipynb
+++ b/SpeedDating.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An Experiment on Speed Dating\n",
+    "# An Experiment on Speed Dating\n"
    ]
   },
   {
